[gd_scene load_steps=19 format=1]

[ext_resource path="res://Scripts/Town.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/town.jpg" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/GUI/button0000.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/GUI/button0002.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/GUI/button0001.png" type="Texture" id=5]
[ext_resource path="res://Resources/Fonts/gooddog30.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Scenes/BackButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/MonsterShop.gd" type="Script" id=8]
[ext_resource path="res://Scenes/SelectBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Display.tscn" type="PackedScene" id=10]
[ext_resource path="res://Resources/Sprites/GUI/blank1.png" type="Texture" id=11]
[ext_resource path="res://Resources/Sprites/GUI/blank2.png" type="Texture" id=12]
[ext_resource path="res://Resources/Sprites/GUI/blank0.png" type="Texture" id=13]
[ext_resource path="res://Resources/Fonts/fall18.fnt" type="BitmapFont" id=14]
[ext_resource path="res://Resources/Sprites/GUI/SelectUnitHover.png" type="Texture" id=15]
[ext_resource path="res://Scripts/CatalystShop.gd" type="Script" id=16]
[ext_resource path="res://Scenes/CatalystBox.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/AmountChooser.tscn" type="PackedScene" id=18]

[node name="Town" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="TownBackground" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="VBox" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="ShopMonster" type="TextureButton" parent="VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 422.0
margin/top = 63.0
margin/right = 602.0
margin/bottom = 133.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="VBox/ShopMonster"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Buy Monsters"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ShopCatalist" type="TextureButton" parent="VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 422.0
margin/top = 264.0
margin/right = 602.0
margin/bottom = 334.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="VBox/ShopCatalist"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "BuyCatalists"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ShopConstruction" type="Button" parent="VBox"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 469.0
margin/top = 365.0
margin/right = 555.0
margin/bottom = 385.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Buy Ciment"
flat = false

[node name="Back" parent="VBox" instance=ExtResource( 7 )]

size_flags/vertical = 1
margin/top = 480.0
margin/bottom = 522.0

[node name="MonsterShop" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 8 )

[node name="SelectBox" parent="MonsterShop" instance=ExtResource( 9 )]

margin/left = 30.0
margin/right = 70.0

[node name="Display" parent="MonsterShop" instance=ExtResource( 10 )]

[node name="Buy" type="TextureButton" parent="MonsterShop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 752.0
margin/top = 543.0
margin/right = 852.0
margin/bottom = 596.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
textures/hover = ExtResource( 13 )
textures/disabled = ExtResource( 12 )
params/scale = Vector2( 0.5, 0.75 )
params/modulate = Color( 0.949219, 0.588569, 0.0259552, 1 )

[node name="BuyLabel" type="Label" parent="MonsterShop"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 778.0
margin/top = 555.0
margin/right = 808.0
margin/bottom = 573.0
custom_fonts/font = ExtResource( 14 )
text = "Buy"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Back" type="TextureButton" parent="MonsterShop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 875.0
margin/top = 543.0
margin/right = 975.0
margin/bottom = 596.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
textures/hover = ExtResource( 13 )
textures/disabled = ExtResource( 12 )
params/scale = Vector2( 0.5, 0.75 )
params/modulate = Color( 0.738281, 0, 0, 1 )

[node name="BackLabel" type="Label" parent="MonsterShop"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 898.0
margin/top = 555.0
margin/right = 938.0
margin/bottom = 573.0
custom_fonts/font = ExtResource( 14 )
text = "Back"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PriceBackground" type="Sprite" parent="MonsterShop"]

visibility/visible = false
transform/pos = Vector2( 922.202, 272.564 )
transform/scale = Vector2( 0.46458, 0.209702 )
texture = ExtResource( 15 )
modulate = Color( 0.6875, 1, 0, 1 )

[node name="KeshaIcon" type="Sprite" parent="MonsterShop"]

visibility/visible = false
transform/pos = Vector2( 259.053, -57.7037 )

[node name="Price" type="Label" parent="MonsterShop"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 879.0
margin/top = 263.0
margin/right = 1035.0
margin/bottom = 281.0
custom_fonts/font = ExtResource( 14 )
text = "Price: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CatalShop" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -1.0
margin/right = 40.0
margin/bottom = 39.0
script/script = ExtResource( 16 )

[node name="CatalystBox" parent="CatalShop" instance=ExtResource( 17 )]

margin/left = 100.0
margin/top = 50.0
margin/right = 140.0
margin/bottom = 90.0

[node name="AmountChooser" parent="CatalShop/CatalystBox" instance=ExtResource( 18 )]

margin/left = 80.0
margin/right = 120.0

[node name="Buy" type="Button" parent="CatalShop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 550.0
margin/right = 386.0
margin/bottom = 570.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Buy"
flat = false

[node name="Back" parent="CatalShop" instance=ExtResource( 7 )]

margin/top = 545.0
margin/bottom = 587.0

[connection signal="pressed" from="VBox/ShopMonster" to="." method="_on_ShopMonster_pressed"]

[connection signal="pressed" from="VBox/ShopCatalist" to="." method="_on_ShopCatalist_pressed"]

[connection signal="pressed" from="VBox/Back" to="." method="_on_Back_pressed"]

[connection signal="pressed" from="MonsterShop/Buy" to="MonsterShop" method="_on_Buy_pressed"]

[connection signal="pressed" from="MonsterShop/Back" to="MonsterShop" method="_on_Back_pressed"]

[connection signal="pressed" from="CatalShop/Buy" to="CatalShop" method="_on_Buy_pressed"]

[connection signal="pressed" from="CatalShop/Back" to="CatalShop" method="_on_Back_pressed"]


[editable path="CatalShop/CatalystBox"]
